2005-11-15  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/widgets/list.py (List._load): Catch StopIteration, in case
	we have an empty list.

2005-11-14  Gustavo Sverzut Barbieri <barbieri@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py:
	Do not use get_name for getting the name of objects, since it's only
	present for GtkWidgets, instead use get_data('gazpacho::object-id'),
	which is set on all objects. Fixes #2231.

2005-11-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (SummaryLabel.update_total): Remove
	erroneousness show.
	(ListLabel.set_value): Rename from set_text

2005-11-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (ListLabel):
	Add a new label, (actually an hbox), which can be put under or on
	top of a KiwiList to have a label vertically aligned with
	a column.
	(SummaryLabel): Subclass of ListLabel which summarizes the
	values of a column.
	
	* kiwi/ui/widgets/checkbutton.py (CheckButton.prop_set_data_type): 
	Accept string here.

	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation): Refactor
	emitting of validation-changed since we also need to emit it when
	calling set_[valid|invalid|blank] and not only in validate_data.
	Fixes validation of mandatory entry with completion enabled.

2005-11-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxies.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/spinbutton.py:
	Move validate_data out of read, and do it manually afterwards,
	there's only two call sites anyway.

2005-11-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gadgets.py:
	* kiwi/ui/views.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/list.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	* kiwi/utils.py:
